service1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-service1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application-service1
  template:
    metadata:
      labels:
        app: application-service1
    spec:
      containers:
      - name: application-service1
        image: guotinghao/application-service1:v1
        ports:
        - containerPort: 5000
